--- a/index.html
+++ b/index.html
@@ -1,86 +1,88 @@
 <html ng-app="fireideaz">
   <head>
- 	<meta charset="UTF-8">
-  	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-  	<link rel="stylesheet" type="text/css" href="dist/main.css">
-	<script src="dist/main.js"></script>
+    <meta charset="UTF-8">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="dist/main.css">
+    <script src="dist/main.js"></script>
   </head>
   <body ng-controller="MainCtrl">
-  	<header>
-  		<h1>Fireideaz - {{boardId}}</h1>
-		<span>
-			<button ng-show="board.columns.length < 6" ng-click="utils.openDialogColumn(this)">New column</button>
-			<button ng-click="utils.openDialogBoard(this)">New board</button>
-			<iframe src="https://ghbtns.com/github-btn.html?user=glauberramos&repo=fireideaz&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
-		</span>
-  	</header>
-	<h1 ng-show="boardId == ''">Invalid Board<small>Choose a name to insert after ♯ in the url</small></h1>
-  	<span class="container">
-	  	<span ng-show="boardId != ''" class="message-list" ng-repeat="type in board.columns">
-		    <ul class="column column_{{ type.id }}">
-		      <a class="controls delete" ng-show="utils.showRemoveColumn(type.id, board.columns) && !editing" href="javascript:void(0)" ng-click="deleteLastColumn()"><i class="fa fa-times"></i></a>
-		      <h2 ng-show="!editing" ng-click="editing = true; newName=type.value;">
-		      	{{type.value}}
-		      </h2>
-		      <a ng-show="!editing" class="add" ng-click="addNewMessage(type)" href="javascript:void(0)"><i class="fa fa-plus"></i></a>
-		      <div class="editing-column">
-		      	  <input id="new_name_{{ type.id }}" ng-model="newName" ng-show="editing"></input>
-			      <button ng-click="changeColumnName(type.id, newName)" ng-show="editing" class="success-button">Save</button>
-		      	  <a ng-show="editing" class="blue" ng-click="editing=false;">Cancel</a>
-	      	  </div>
-		      <li id="{{ message.$id }}" enter-click class="message" style="width: {{ 100 / board.columns.length - 1.5 }}%" ng-class="{'flip': isEditing}" ng-repeat="message in messages | filter: {type: {id: type.id}}" ng-style="{'top': utils.getHeight(message, $index) }">
-		      	<div class="front">
-			      	<div class="message-body">
-		        		<div class="text">{{message.text}}</div>
-		        		<a href="javascript:void(0)" class="pencil" ng-click="isEditing = true; utils.focusElement(message.$id);"><i class="fa fa-pencil"></i></a>
-			        </div>
-			        <div class="votes">
-			        	<a href="javascript:void(0)" ng-click="addVote(message.$id, message.votes)">
-			        		<i class="fa fa-thumbs-o-up"></i>
-			        	</a>
-			        	<strong>+ {{ message.votes }}</strong>
-			        </div>
-		        </div>
-		        <div class="back">
-		        	<div class="message-body">
-			        	<div class="editing">
-			        		<textarea maxlength="195" ng-model="message.text" ng-change="messages.$save(message)"></textarea>
-			        		<a class="delete-link" href="javascript:void(0)" ng-click="deleteMessage(message)"><i class="fa fa-times"></i></a>
-			        		<button ng-click="isEditing = false;">Done</button>
-			        	</div>
-			        </div>
-		        </div>
-		      </li>
-		    </ul>
-	    </span>
+    <header>
+        <h1>Fireideaz - {{boardId}}</h1>
+        <span>
+            <button ng-show="board.columns.length < 6" ng-click="utils.openDialogColumn(this)">New column</button>
+            <button ng-click="utils.openDialogBoard(this)">New board</button>
+            <iframe src="https://ghbtns.com/github-btn.html?user=glauberramos&repo=fireideaz&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
+        </span>
+    </header>
+    <h1 ng-show="boardId == ''">Invalid Board<small>Choose a name to insert after ♯ in the url</small></h1>
+    <span class="container">
+        <span ng-show="boardId != ''" class="message-list" ng-repeat="type in board.columns">
+            <ul class="column column_{{ type.id }}">
+              <a class="controls delete" ng-show="utils.showRemoveColumn(type.id, board.columns) && !editing" href="javascript:void(0)" ng-click="deleteLastColumn()"><i class="fa fa-times"></i></a>
+              <h2 ng-show="!editing" ng-click="editing = true; newName=type.value;">
+                {{type.value}}
+              </h2>
+              <a ng-show="!editing" class="add" ng-click="addNewMessage(type)" href="javascript:void(0)"><i class="fa fa-plus"></i></a>
+              <div class="editing-column">
+                  <input id="new_name_{{ type.id }}" ng-model="newName" ng-show="editing"></input>
+                  <button ng-click="changeColumnName(type.id, newName)" ng-show="editing" class="success-button">Save</button>
+                  <a ng-show="editing" class="blue" ng-click="editing=false;">Cancel</a>
+              </div>
+              <li id="{{ message.$id }}" enter-click class="message" style="width: {{ 100 / board.columns.length - 1.5 }}%" ng-class="{'flip': isEditing}" ng-repeat="message in messages | filter: {type: {id: type.id}}" ng-style="{'top': utils.getHeight(message, $index) }">
+                <div class="front">
+                    <div class="message-body">
+                        <div class="text">{{message.text}}</div>
+                        <a href="javascript:void(0)" class="pencil" ng-click="isEditing = true; utils.focusElement(message.$id);"><i class="fa fa-pencil"></i></a>
+                    </div>
+                    <div class="votes">
+                        <a href="javascript:void(0)" ng-click="addVote(message.$id, message.votes)">
+                            <i class="fa fa-thumbs-o-up"></i>
+                        </a>
+                        <strong>+ {{ message.votes }}</strong>
+                    </div>
+                </div>
+                <div class="back">
+                    <div class="message-body">
+                        <div class="editing">
+                            <textarea maxlength="195" ng-model="message.text" ng-change="messages.$save(message)"></textarea>
+                            <a class="delete-link" href="javascript:void(0)" ng-click="deleteMessage(message)"><i class="fa fa-times"></i></a>
+                            <button ng-click="isEditing = false;">Done</button>
+                        </div>
+                    </div>
+                </div>
+              </li>
+            </ul>
+        </span>
     </span>
     <div class="spinner" ng-show="loading">
-    	<div class="overlay"></div>
-	    <div class="rect rect1"></div>
-		<div class="rect rect2"></div>
-		<div class="rect rect3"></div>
-		<div class="rect rect4"></div>
-		<div class="rect rect5"></div>
+        <div class="overlay"></div>
+        <div class="rect rect1"></div>
+        <div class="rect rect2"></div>
+        <div class="rect rect3"></div>
+        <div class="rect rect4"></div>
+        <div class="rect rect5"></div>
     </div>
   </body>
   <script type="text/ng-template" id="addNewColumn">
-	<h1>New column</h1>
-	<input ng-model="newColumn" type="text"></input>
-	<button ng-click="addNewColumn(newColumn); newColumn='';">Add</button>
+    <h1>New column</h1>
+    <input ng-model="newColumn" type="text"></input>
+    <button ng-click="addNewColumn(newColumn); newColumn='';">Add</button>
   </script>
   <script type="text/ng-template" id="addNewBoard">
-	<h1>New board</h1>
-	<p>Board name example: <strong>team-board-123</strong></p>
-	<input ng-model="newBoard.name" ng-change="boardNameChanged()" type="text" placeholder="Board name"></input>
-	<button ng-click="createNewBoard()">Create</button>
+    <h1>New board</h1>
+    <p>Board name example: <strong>team-board-123</strong></p>
+    <input ng-model="newBoard.name" ng-change="boardNameChanged()" type="text" placeholder="Board name"></input>
+    <button ng-click="createNewBoard()">Create</button>
   </script>
   <script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-	  ga('create', 'UA-66141519-1', 'auto');
-	  ga('send', 'pageview');
+      ga('create', 'UA-66141519-1', 'auto');
+      ga('send', 'pageview');
   </script>
 </html>
